--- a/Site/Index.html
+++ b/Site/Index.html
@@ -1,12 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site vente de limonade</title>
+	<meta charset="utf-8">
+	<title>Dégustation de limonade</title>
+	<link rel="stylesheet" href="./style.css">
+	<link rel="stylesheet" href="./style-mobile.css">
 </head>
 <body>
-    
+	<header>
+		<div>
+			<img src="./media/logoDavids.png" alt="logo" width="10%">
+			<nav>
+				<ul>
+					<li>Présentaion</li><!--
+				 --><li>Liste Evenement</li><!--
+				 --><li>Formulaire</li><!--
+				 --><li>Item 4</li>
+				</ul>
+			</nav>
+		</div>
+	</header>
+
+	<main>
+    </main>
+
+	<footer>
+	</footer>
 </body>
 </html>
