--- a/Site/Index.html
+++ b/Site/Index.html
@@ -12,7 +12,7 @@
 			<img src="./media/logoDavids.png" alt="logo" width="10%">
 			<nav>
 				<ul>
-					<li>Présentaion</li><!--
+					<li>Présentation</li><!--
 				 --><li>Liste Evenement</li><!--
 				 --><li>Formulaire</li><!--
 				 --><li>Item 4</li>
