--- a/Site/Index.html
+++ b/Site/Index.html
@@ -9,7 +9,7 @@
 <body>
 	<header>
 		<div>
-			<img src="./media/logoDavids.png" alt="logo" width="10%">
+			<img src="./media/logoDavids.png" alt="logo">
 			<nav>
 				<ul>
 					<li>Présentation</li><!--
@@ -22,18 +22,57 @@
 	</header>
 
 	<main>
-		<div>
+		<div id="divPresentation">
 			<p>Présentation :</p>
 			<br>
-			<a>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis placerat sagittis rhoncus. Aliquam faucibus arcu a dolor fermentum, id ullamcorper purus fermentum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse volutpat facilisis mauris sit amet tincidunt. Nullam eu lacus condimentum, lacinia elit a, efficitur ligula. Suspendisse eget lorem ut sem mollis tincidunt. In hac habitasse platea dictumst. Maecenas quis quam a eros suscipit pharetra. Donec aliquet, diam eu feugiat viverra, massa ligula condimentum ex, sed malesuada urna lacus eget ligula. Donec in elementum diam. Fusce metus ligula, consectetur at sapien nec, interdum semper enim. Pellentesque mollis nulla in eleifend aliquam.
+			<img src="./media/Image présentation.jpg" alt="image présentation" id="imgPresentation">
+			<span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis placerat sagittis rhoncus. Aliquam faucibus arcu a dolor fermentum, id ullamcorper purus fermentum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse volutpat facilisis mauris sit amet tincidunt. Nullam eu lacus condimentum, lacinia elit a, efficitur ligula. Suspendisse eget lorem ut sem mollis tincidunt. In hac habitasse platea dictumst. Maecenas quis quam a eros suscipit pharetra. Donec aliquet, diam eu feugiat viverra, massa ligula condimentum ex, sed malesuada urna lacus eget ligula. Donec in elementum diam. Fusce metus ligula, consectetur at sapien nec, interdum semper enim. Pellentesque mollis nulla in eleifend aliquam.
 
-				Pellentesque dapibus arcu at purus vulputate, accumsan scelerisque sem pulvinar. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin viverra risus et sem rutrum, in laoreet lectus convallis. Phasellus lacinia vestibulum nisl a interdum. Morbi erat dolor, tincidunt in augue id, egestas molestie justo. In hac habitasse platea dictumst. Pellentesque in lorem vestibulum, mattis magna ut, dapibus augue. Quisque in convallis mi.
-				
-				Cras volutpat ipsum scelerisque ullamcorper consectetur. Donec libero nisl, laoreet vitae velit ut, tincidunt porttitor neque. Sed accumsan sit amet nisi in fringilla. Sed eu aliquet turpis. Donec felis augue, ultrices ut sem at, ultricies molestie ipsum. In hac habitasse platea dictumst. Vestibulum nec elit vehicula dolor consequat feugiat id at sapien.
-			</a>
+				Pellentesque dapibus arcu at purus vulputate, accumsan scelerisque sem pulvinar. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin viverra risus et sem rutrum, in laoreet lectus convallis. Phasellus lacinia vestibulum nisl a interdum. Morbi erat dolor, tincidunt in augue id, egestas molestie justo. In hac habitasse.
+			</span>
 		</div>
-		</div>
+		<div id="divEvenement">
+			<p>Liste Evènements :</p>
+			<article id="ecriture">
+				<ul>
+				<ul>
+					<span>Bafodé le bg</span>
+					<li>Présentation</li>
+					<li>Liste Evenement</li>
+					<li>Formulaire</li>
+					<li>Cambava.com</li>
+				</ul>
 			
+				<ul>
+					<span>Bafodé le bg</span>
+					<li>Présentation</li>
+					<li>Liste Evenement</li>
+					<li>Formulaire</li>
+					<li>Cambava.com</li>
+				</ul>
+
+				<ul>
+					<span>Bafodé le bg</span>
+					<li>Présentation</li>
+					<li>Liste Evenement</li>
+					<li>Formulaire</li>
+					<li>Cambava.com</li>
+				</ul>
+				
+				<ul>
+					<span>Bafodé le bg</span>
+					<li>Présentation</li>
+					<li>Liste Evenement</li>
+					<li>Formulaire</li>
+					<li>Cambava.com</li>
+				</ul>
+			</ul>
+			</article>
+			<article id="carte">
+				<div class="map">
+					<iframe src="https://www.google.com/maps/d/embed?mid=1POpDbW8Ln95j4xbjc7oRZZQ5QUMbhoqa&hl=fr" width="640" height="480"></iframe>
+				</div>
+			</article>
 		</div>
     </main>
 
