--- a/Site/Index.html
+++ b/Site/Index.html
@@ -13,9 +13,16 @@
 			<nav>
 				<ul>
 					<li>Présentation</li><!--
-				 --><li>Liste Evenement</li><!--
+				 --><li>Liste Evenement
+						<ul>
+							<li><a href="#">Evenement 1</a></li>
+							<li><a href="#">Evenement 2</a></li>
+							<li><a href="#">Evenement 3</a></li>
+							<li><a href="#">Evenement 4</a></li>
+						</ul>
+					</li><!--
 				 --><li>Formulaire</li><!--
-				 --><li>Cambava.com</li>
+				 --><li><a href="#">Combava.com</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -70,13 +77,64 @@
 			</article>
 			<article id="carte">
 				<div class="map">
-					<iframe src="https://www.google.com/maps/d/embed?mid=1POpDbW8Ln95j4xbjc7oRZZQ5QUMbhoqa&hl=fr" width="640" height="480"></iframe>
+					<iframe src="https://www.google.com/maps/d/embed?mid=1POpDbW8Ln95j4xbjc7oRZZQ5QUMbhoqa&hl=fr" width="59%" height="480"></iframe>
 				</div>
 			</article>
+		</div>
+		<img src="./media/Image obligatoire .png" alt="Image transition." id="imgTransition">
+		<div id="formulaire">
+			<p>Formulaire d'inscription :</p>
+			<div id="container">
+				<form>
+					<div id="tel">
+						<label for="telephone">Téléphone :</label>
+						<input type="telephone" id="telephone" name="user_tel">
+					</div>
+
+					<div id="email">
+						<label for="mail">Mail :</label>
+						<input type="email" id="mail" name="user_mail">
+					</div>
+
+					<div id="prénom">
+						<label for="prenom">Prénom :</label>
+						<input type="text" id="prenom" name="user_forname">
+					</div>
+
+					<div id="nom">
+						<label for="name">Nom :</label>
+						<input type="text" id="name" name="user_name">
+					</div>
+					
+					<div id="check">
+						<input type="checkbox" id="autorisation" name="autorisation">
+						<label for="autorisation">Autorisation Information</label>
+					</div>
+
+					<div id="choixEvent">
+						<label for="choix-evenement">Evenement :</label>
+						<input list="choix-evenement-list" id="choix-evenement" name="choix-evenement" />
+
+						<datalist id="choix-evenement-list">
+							<option value="Evènement 1">
+							<option value="Evènement 2">
+							<option value="Evènement 3">
+							<option value="Evènement 4">
+						</datalist>
+					</div>
+				</form>
+			</div>
+			<button id="button" type="submit">Envoyer</button>
 		</div>
     </main>
 
 	<footer>
+		<div id="foot">
+			<a href="#"><img src="./media/Logo_Facebook.png" alt="logo facebook" id="logo"></a>
+			<a href="#"><img src="./media/Logo_Insta.png" alt="logo insta" id="logo"></a>
+			<a href="#"><img src="./media/logo_Twitter.png" alt="logo twitter" id="logoT"></a>
+			<a href="#"><p>Combawa.com</p></a>
+		</div>
 	</footer>
 </body>
 </html>
