--- a/Site/Index.html
+++ b/Site/Index.html
@@ -113,18 +113,18 @@
 
 					<div id="choixEvent">
 						<label for="choix-evenement">Evenement :</label>
-						<input list="choix-evenement-list" id="choix-evenement" name="choix-evenement" />
+						<!-- <input list="choix-evenement-list" id="choix-evenement" name="choix-evenement" /> -->
 
-						<datalist id="choix-evenement-list">
-							<option value="Evènement 1">
-							<option value="Evènement 2">
-							<option value="Evènement 3">
-							<option value="Evènement 4">
-						</datalist>
+						<select id="choix-evenement-list">
+							<option value="Evènement 1">Evènement 1</option>
+							<option value="Evènement 2">Evènement 2</option>
+							<option value="Evènement 3">Evènement 3</option>
+							<option value="Evènement 4">Evènement 4</option>
+						</select>
 					</div>
 				</form>
 			</div>
-			<button id="button" type="submit">Envoyer</button>
+			<button id="button" type="submit" onclick="self.location.href='index.html'">Envoyer</button>
 		</div>
     </main>
 
