Correction_Erreur_Combava.com_Pied_de_page

--- a/Site/Index.html
+++ b/Site/Index.html
@@ -143,7 +143,7 @@
 			<a href="https://facebook.com/"><img src="./media/Logo_Facebook.png" alt="logo facebook" id="logo"></a>
 			<a href="https://instagram.com/"><img src="./media/Logo_Insta.png" alt="logo insta" id="logo"></a>
 			<a href="https://twitter.com/"><img src="./media/logo_Twitter.png" alt="logo twitter" id="logoT"></a>
-			<a href="http://combava.com/"><p>Combawa.com</p></a>
+			<a href="http://combava.com/"><p>Combava.com</p></a>
 		</div>
 	</footer>
 </body>
