g testé  un diapo mais g pas reussi

--- a/Site/Index.html
+++ b/Site/Index.html
@@ -34,7 +34,7 @@
 					<scroll-page id="presentation"></scroll-page>
 				<p>Présentation :</p>
 				<br>
-				<img src="./media/Image présentation.jpg" alt="image présentation" id="imgPresentation">
+				<img src="./media/davidsPresentation0.jpg" alt="image présentation" id="imgPresentation">
 				<span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis placerat sagittis rhoncus. Aliquam faucibus arcu a dolor fermentum, id ullamcorper purus fermentum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse volutpat facilisis mauris sit amet tincidunt. Nullam eu lacus condimentum, lacinia elit a, efficitur ligula. Suspendisse eget lorem ut sem mollis tincidunt. In hac habitasse platea dictumst. Maecenas quis quam a eros suscipit pharetra. Donec aliquet, diam eu feugiat viverra, massa ligula condimentum ex, sed malesuada urna lacus eget ligula. Donec in elementum diam. Fusce metus ligula, consectetur at sapien nec, interdum semper enim. Pellentesque mollis nulla in eleifend aliquam.
 
 					Pellentesque dapibus arcu at purus vulputate, accumsan scelerisque sem pulvinar. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin viverra risus et sem rutrum, in laoreet lectus convallis. Phasellus lacinia vestibulum nisl a interdum. Morbi erat dolor, tincidunt in augue id, egestas molestie justo. In hac habitasse.
