--- a/Site/Index.html
+++ b/Site/Index.html
@@ -37,17 +37,19 @@
 				<img src="./media/davidsPresentation0.jpg" alt="image présentation" id="imgPresentation">
 
 				<span>
-					<h2>Notre association</h2>
-					Pour la petite histoire : dans les années 50 aux USA, les enfants montaient des stands de citronnade maison devant chez eux, afin de récolter un peu d'argent de poche. 
-					Une entreprise de l'époque, "David's Lemonade", a repris l'idée et répandu le principe de ces stands de citronnade à 5 cents dans tout le pays. Malgré son énorme succès, 70 ans après, elle a aujourd'hui disparu.
-					L'association Combava, qui regroupe des producteurs indépendants d'agrumes du sud de la France, cherche une façon de se faire connaître, tant auprès des magasins que des clients. 
-					Pour cela, elle a eu l'idée d'organiser des dégustations privées, "VIP", de citronnade dans tout le pays, comme font les négociants de vin. 
-					En guise de clin d'œil, Combava a eu l'autorisation d'utiliser le nom et l'identité graphique de "David's Lemonade", afin de bénéficier d'une aura old school, en cohérence avec ses valeurs et à l'opposé des grandes chaînes de boissons américaines. 
+					<h2>L'histoire de la limonade</h2>
+					Dans les années 50, les enfants des états unis vendaient de la limonade faites maison pour 5 cents sur des stands devant chez eux pour se faire un peu d'argent de poche. 
+					Donc à cette époque une entreprise appelée « David’s Lemonade » s'est inspiré de cette tradition pour la répandre dans tout le pays, et celle-ci a rencontré un franc succès. 
+					Mais malheureusement de nos jours cette entreprise a disparu. 
 				</span>
 				<br>
 				<div id="citronnade">
-					<h2>Notre citronnade</h2>
-					<span>La citronnade est une boisson saine, mettant en avant le goût unique des différents agrumes frais et bio de production locale. C’est un produit naturel tout à fait dans l'air du temps. De plus, les producteurs adhérents seront présents lors des dégustations pour défendre la qualité de leurs produits.</span>
+					<h2>Notre association</h2>
+					<span>Combava regroupe différents producteurs d'agrumes tous indépendants et venants du sud de la France. 
+						Notre citronnade a pour but d'être une boisson saine qui permet avant tout de mettre en avant le goût de nos agrumes frais et bio que nous produisons localement, à l'instar de « David’s Lemonade » nous souhaitons promouvoir le fait-maison et le bio que nous ne nous retrouvons malheureusement pas dans les grandes chaînes de boissons. 
+						C’est donc pour vous faire découvrir notre boisson que nous avons décidé d'organiser des dégustations privées autour de tout le pays, lors de celle-ci nos producteurs adhérents seront présents pour vous présenter leurs produits et défendre leurs qualités. 
+						Si vous êtes un magasin à la recherche de producteurs ou alors juste une personne à la recherche de bons produits n'hésitez pas à venir vous inscrire pour une de nos dégustations chez nos magasins partenaires ou des associations locales. 
+						Vous trouverez toutes les informations nécessaires ci-dessous, et si vous souhaitez plus d'informations sur notre association n'hésitez pas à aller voir notre site Combava.com</span>
 				</div>
 				
 			</div>
