--- a/Site/Index.html
+++ b/Site/Index.html
@@ -102,8 +102,8 @@
 							<li class="sousItems">63350 Maringues</li>
 						</ul>
 					</article>
-					<article>
-						<div id="carte">
+					<article id="carte">
+						<div id="mapResponsive">
 							<scroll-page id="map"></scroll-page>
 							<iframe src="https://www.google.com/maps/d/embed?mid=1POpDbW8Ln95j4xbjc7oRZZQ5QUMbhoqa&hl=fr"></iframe>
 						</div>
