fini + ajout doc d'envoie

--- a/Site/Index.html
+++ b/Site/Index.html
@@ -243,9 +243,9 @@
 	<footer>
 		<div id="foot">
 			<div id="reseaux">
-				<a href="https://facebook.com/"><img src="./media/Logo_Facebook.png" alt="logo facebook" class="logoFbEtInsta"></a>
-				<a href="https://instagram.com/"><img src="./media/Logo_Insta.png" alt="logo insta" class="logoFbEtInsta"></a>
-				<a href="https://twitter.com/"><img src="./media/logo_Twitter.png" alt="logo twitter" id="logoT"></a>
+				<a href="#"><img src="./media/Logo_Facebook.png" alt="logo facebook" class="logoFbEtInsta"></a>
+				<a href="#"><img src="./media/Logo_Insta.png" alt="logo insta" class="logoFbEtInsta"></a>
+				<a href="#"><img src="./media/logo_Twitter.png" alt="logo twitter" id="logoT"></a>
 			</div>
 			<div id="cambava">
 				<a href="http://combava.com/"><p>Combava.com</p></a>
