--- a/Site/Index.html
+++ b/Site/Index.html
@@ -125,9 +125,8 @@
 	
 						<ul class="evenements">
 							<li>Bio & Sens Montpellier</li>
-							<li class="sousItems">C. Cial Les Portes du Soleil</li>
-							<li class="sousItems">parking aérien, Allée de l'Europe</li>
-							<li class="sousItems">34990 Juvignac</li>
+							<li class="sousItems">C. Cial Les Portes du Soleil,parking aérien</li>
+							<li class="sousItems">Allée de l'Europe,34990 Juvignac</li>
 						</ul>
 	
 						<ul class="evenements">
