--- a/Site/Index.html
+++ b/Site/Index.html
@@ -13,10 +13,10 @@
 			<nav>
 				<ul>
 					<li> <a href="#presentation">Présentation</a></li><!--
-				 --><li>Liste Evenement
+				 --><li>Liste Evènement
 						<ul>
 							<li><a href="#lieu">Lieux de dégustation</a></li>
-							<li><a href="#map">Carte des évenements</a></li>
+							<li><a href="#map">Carte des évènements</a></li>
 							<li><a href="#autres">Plus de lieux</a></li>
 						</ul>
 					</li><!--
